--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/freeCodeCamp/freeCodeCamp/issues"
   },
-  "homepage": "https://kandoruus.github.io/timestamp/views/index.html",
+  "homepage": "https://kandoruus.github.io/timestamp",
   "author": "kandoruus",
   "keywords": [
     "node",
